# PII_NER_Assignment

./: .gitignore  README.md  assignment.md  dev_pred.json  main.py  modal_app.py  pyproject.toml  requirements.txt
data/: pii_en_dev.jsonl  pii_en_test.jsonl
docs/: datasets.md
scripts/: build_dataset.py  inspect_labels.py  quantize_model.py  split_dataset.py
src/: dataset.py  eval_span_f1.py  measure_latency.py  model.py  predict.py  span_utils.py  train.py
